--- a/canvas1.html
+++ b/canvas1.html
@@ -5,11 +5,11 @@
   <title></title>  
 </head>  
 <body onload="draw();">
-	<canvas id="canvas" width="150" height="150">
-	      <p>写在这里面的内容将展示给不兼容canvas的浏览器</p>
-	</canvas>
+    <canvas id="canvas" width="200" height="100" style="border:1px solid red">
+          <p>写在这里面的内容将展示给不兼容canvas的浏览器</p>
+    </canvas>
 </body>
-<script type="text/javascript">	
+<script type="text/javascript"> 
   function draw() { 
       //第一步：获取canvas元素
       canvas = document.getElementById("canvas");
