--- a/canvas2.html
+++ b/canvas2.html
@@ -5,7 +5,7 @@
   <title></title>  
 </head>  
 <body onload="draw();">
-	<canvas id="canvas" width="150" height="150">
+	<canvas id="canvas" width="200" height="100" style="border:1px solid red">
 	      <p>写在这里面的内容将展示给不兼容canvas的浏览器</p>
 	</canvas>
 </body>
