--- a/canvas1.html
+++ b/canvas1.html
@@ -15,6 +15,7 @@
       canvas = document.getElementById("canvas");
       //第二步：获取上下文
       ctx = canvas.getContext("2d"); 
+      console.log(ctx);
   }
 </script>
 </html>
