--- a/canvas_arc.html
+++ b/canvas_arc.html
@@ -21,38 +21,38 @@
 var canvas=document.getElementById("canvas");
 var ctx=canvas.getContext("2d");
 
-var img = new Image();
-img.src = "./img/phoenix.jpg";
-img.onload = function(){
+ctx.beginPath(); 
+ctx.arc(120,120,80,0,Math.PI/2,true);
+ctx.lineWidth = 4;
+ctx.strokeStyle = "#000";
+ctx.stroke(); 
 
-  ctx.save();
-  ctx.rotate(Math.PI/6);
-  ctx.drawImage(img,0,0,400,400);
-  ctx.restore();
+ctx.beginPath();
+ctx.lineWidth = 4;
+ctx.strokeStyle = "#0610f8";
+ctx.arc(120,160,80,0,Math.PI/2,false); 
+ctx.stroke(); 
 
-}
+ctx.beginPath(); 
+ctx.arc(280,240,80,0,Math.PI/2,true);
+ctx.fillStyle = "#000"; 
+ctx.fill(); 
 
-function drawLine(x1,y1,x2,y2,w){
-  w = w || 1;
-  ctx.beginPath();
-  ctx.moveTo(x1,y1);
-  ctx.lineTo(x2,y2);
-  
-  ctx.lineWidth = w;
-  ctx.strokeStyle="#000";
-  ctx.stroke();
-}
+ctx.beginPath();
+ctx.fillStyle = "#0610f8"; 
+ctx.arc(280,280,80,0,Math.PI/2,false); 
+ctx.fill();
+
 
 var coordinateCanvas=document.getElementById("coordinateCanvas");
 var coordinateCtx=coordinateCanvas.getContext("2d");
 function coordinateSystem(){//画坐标轴
-  coordinateCtx.translate(80, 80);
-  coordinateCtx.rotate(Math.PI/6);
   coordinateCtx.lineWidth = 1;
   coordinateCtx.strokeStyle = 'rgba(81, 195, 50, 0.1)';
   coordinateCtx.font = "10px Arial";
   coordinateCtx.textAlign = "center";
   coordinateCtx.fillStyle = "rgba(0, 0, 0, 0.5)";
+  coordinateCtx.translate(80, 80);
   var ca = 40,len = 100;
   for (var i = -len; i < len; i++) {
     var l = 0;
