--- a/canvas_clip.html
+++ b/canvas_clip.html
@@ -22,14 +22,25 @@ var canvas=document.getElementById("canvas");
 var ctx=canvas.getContext("2d");
 
 var img = new Image();
-img.src = "./img/phoenix.jpg";
+img.src = "./img/pikaqiu3.png";
 img.onload = function(){
 
+  ctx.beginPath();
+  ctx.moveTo(210,80);
+  ctx.lineTo(80,190);
+  ctx.lineTo(190,320);
+  ctx.lineTo(320,210);
+  ctx.closePath();
+  
+  ctx.lineWidth = 5;
+  ctx.strokeStyle="green";
+  ctx.stroke();
+  
   ctx.save();
-  ctx.rotate(Math.PI/6);
-  ctx.drawImage(img,0,0,400,400);
+  ctx.clip();
+  ctx.drawImage(img,80,80,240,240);
   ctx.restore();
-
+  
 }
 
 function drawLine(x1,y1,x2,y2,w){
@@ -46,13 +57,12 @@ function drawLine(x1,y1,x2,y2,w){
 var coordinateCanvas=document.getElementById("coordinateCanvas");
 var coordinateCtx=coordinateCanvas.getContext("2d");
 function coordinateSystem(){//画坐标轴
-  coordinateCtx.translate(80, 80);
-  coordinateCtx.rotate(Math.PI/6);
   coordinateCtx.lineWidth = 1;
   coordinateCtx.strokeStyle = 'rgba(81, 195, 50, 0.1)';
   coordinateCtx.font = "10px Arial";
   coordinateCtx.textAlign = "center";
   coordinateCtx.fillStyle = "rgba(0, 0, 0, 0.5)";
+  coordinateCtx.translate(80, 80);
   var ca = 40,len = 100;
   for (var i = -len; i < len; i++) {
     var l = 0;
