--- a/canvas_draw.html
+++ b/canvas_draw.html
@@ -22,14 +22,16 @@ var canvas=document.getElementById("canvas");
 var ctx=canvas.getContext("2d");
 
 var img = new Image();
-img.src = "./img/phoenix.jpg";
+img.src = "./img/pikaqiu3.png";
 img.onload = function(){
-
   ctx.save();
-  ctx.rotate(Math.PI/6);
-  ctx.drawImage(img,0,0,400,400);
-  ctx.restore();
-
+  ctx.drawImage(img,40,40);
+  
+  ctx.drawImage(img,280,40,100,100);
+  
+  ctx.drawImage(img,50,50,150,150,40,280,100,100);
+  
+  ctx.drawImage(canvas,240,240,120,120);
 }
 
 function drawLine(x1,y1,x2,y2,w){
@@ -46,13 +48,12 @@ function drawLine(x1,y1,x2,y2,w){
 var coordinateCanvas=document.getElementById("coordinateCanvas");
 var coordinateCtx=coordinateCanvas.getContext("2d");
 function coordinateSystem(){//画坐标轴
-  coordinateCtx.translate(80, 80);
-  coordinateCtx.rotate(Math.PI/6);
   coordinateCtx.lineWidth = 1;
   coordinateCtx.strokeStyle = 'rgba(81, 195, 50, 0.1)';
   coordinateCtx.font = "10px Arial";
   coordinateCtx.textAlign = "center";
   coordinateCtx.fillStyle = "rgba(0, 0, 0, 0.5)";
+  coordinateCtx.translate(80, 80);
   var ca = 40,len = 100;
   for (var i = -len; i < len; i++) {
     var l = 0;
