--- a/canvas_pt.html
+++ b/canvas_pt.html
@@ -21,15 +21,12 @@
 var canvas=document.getElementById("canvas");
 var ctx=canvas.getContext("2d");
 
-var img = new Image();
-img.src = "./img/phoenix.jpg";
-img.onload = function(){
-
-  ctx.save();
-  ctx.rotate(Math.PI/6);
-  ctx.drawImage(img,0,0,400,400);
-  ctx.restore();
-
+var patterImg = new Image();
+patterImg.src = "./img/pikaqiu2.png";
+patterImg.onload = function(){
+  var pat = ctx.createPattern(patterImg,"repeat");
+  ctx.fillStyle = pat;
+  ctx.fillRect(40,40,320,320);
 }
 
 function drawLine(x1,y1,x2,y2,w){
@@ -46,13 +43,12 @@ function drawLine(x1,y1,x2,y2,w){
 var coordinateCanvas=document.getElementById("coordinateCanvas");
 var coordinateCtx=coordinateCanvas.getContext("2d");
 function coordinateSystem(){//画坐标轴
-  coordinateCtx.translate(80, 80);
-  coordinateCtx.rotate(Math.PI/6);
   coordinateCtx.lineWidth = 1;
   coordinateCtx.strokeStyle = 'rgba(81, 195, 50, 0.1)';
   coordinateCtx.font = "10px Arial";
   coordinateCtx.textAlign = "center";
   coordinateCtx.fillStyle = "rgba(0, 0, 0, 0.5)";
+  coordinateCtx.translate(80, 80);
   var ca = 40,len = 100;
   for (var i = -len; i < len; i++) {
     var l = 0;
