--- a/canvas_transform2.html
+++ b/canvas_transform2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>HTML5图片修饰</title>
-  <script type="text/javascript" src="http://lufylegend.com/js/lufylegend-1.10.1.min.js"></script>
+  <script type="text/javascript" src="./js/lufylegend-1.10.1.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=0.65,minimum-scale=0.65, maximum-scale=0.65, user-scalable=yes">
   <style type="text/css" media="screen">
   body{margin:0;padding:0;}
