--- a/canvas_transform1.html
+++ b/canvas_transform1.html
@@ -26,7 +26,7 @@ img.src = "./img/pikaqiu.png";
 img.onload = function(){
 
   ctx.save();
-  //ctx.transform(-1, 0, 0, 1, 400, 0);
+  ctx.transform(-1, 0, 0, 1, 400, 0);
   ctx.drawImage(img,0,0,400,400);
   ctx.restore();
 
@@ -47,7 +47,7 @@ var coordinateCanvas=document.getElementById("coordinateCanvas");
 var coordinateCtx=coordinateCanvas.getContext("2d");
 function coordinateSystem(){//画坐标轴
   coordinateCtx.translate(80, 80);
-  //coordinateCtx.transform(-1, 0, 0, 1, 400, 0);
+  coordinateCtx.transform(-1, 0, 0, 1, 400, 0);
   coordinateCtx.lineWidth = 1;
   coordinateCtx.strokeStyle = 'rgba(81, 195, 50, 0.1)';
   coordinateCtx.font = "10px Arial";
